welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: value lettre is not a member of String
var lM = litMessage() lettre match {
                      ^BDR2:3: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "A") => avance()
         ^BDR2:4: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "B")
        ^BDR2:7: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "C")
        ^BDR2:11: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "R")
        ^BDR2:14: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "L")
        ^BDR2:17: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "I")
        ^BDR2:20: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "Z")
        ^BDR2:22: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case(lM == "Y")
        ^BDR2:25: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "X") => recule();recule();recule()
         ^BDR2:26: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "F") 
         ^BDR2:33: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "E") 
         ^BDR2:40: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "D") 
         ^BDR2:45: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "W") => recule();recule();recule();recule()	
         ^BDR2:46: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "V") => recule();recule();recule();recule();recule()
         ^BDR2:47: error: value == is not a case class constructor, nor does it have an unapply/unapplySeq method
case (lM == "U") => recule();recule();recule();recule();recule();recule()		
         ^